examples/passing/ResolvableScopeConflict2/A.purs
module A where

thing :: Int
thing = 2

zing :: Int
zing = 3
