examples/failing/DuplicateDeclarationsInLet.purs
module Main where

foo = a
  where
  a :: Number
  a = 1

  a :: Number
  a = 2
